[gd_scene load_steps=6 format=2]

[ext_resource path="res://ScoreMessage.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://QPF_assets/music/tutorialGood.ogg" type="AudioStream" id=3]
[ext_resource path="res://QPF_assets/music/tutorialBad.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[node name="ScoreMessage" type="Node2D"]
script = ExtResource( 1 )

[node name="ScoreTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreMsgLabel" type="Label" parent="."]
margin_right = 212.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.92549, 0.0862745, 0.0862745, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.129412, 0.129412, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = -1
text = "-1"

[node name="GoodEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="BadEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

